fixed page height and element spacing

--- a/countries/src/index.css
+++ b/countries/src/index.css
@@ -12,4 +12,6 @@
 
 html, body {
     font-family: "Nunito Sans", sans-serif;
+    width: 100%;
+    height: 100%;
 }
